--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                                             <div class="timeline-item">
                                                 <h4 class="item-title">MYBOOKIE</h4>
                                                 <span class="item-small">San Jose, Costa Rica</span>
+                                                <span class="item-small time-work">Dec 2020 – Mar 2021 / 4 mos</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
 MyBookie Sportsbook & Casino. I was hired as a consultant and was in charge of
@@ -222,6 +223,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
                                                 <h4 class="item-title">Jazz Gaming Solutions</h4>
                                                 <span class="item-small">San Jose, Costa Rica</span>
+                                                <span class="item-small time-work">Dec 2017 – Aug 2020 / 2 yrs 9 mos</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
             I was responsible for developing, implementing, and maintaining mostly internal sportsbooks web
@@ -235,6 +237,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
                                                 <h4 class="item-title">CIP Reporting</h4>
                                                 <span class="item-small">Chantilly, Virginia</span>
+                                                <span class="item-small time-work">Jul 2016 – May 2017 / 11 mos</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
                         At my current position, I am working on a web reporting system for casinos. Giving
@@ -256,6 +259,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
                                                 <h4 class="item-title">PROFI</h4>
                                                 <span class="item-small">San Jose, Costa Rica</span>
+                                                <span class="item-small time-work">May 2014 – Jan 2017 / 2 yrs 9 mos</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
                                 At PROFI, I mostly work with WordPress.
@@ -271,6 +275,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
                                                 <h4 class="item-title">Netsoft Group</h4>
                                                 <span class="item-small">Heredia, Costa Rica</span>
+                                                <span class="item-small time-work">Feb 2013 – Jan 2014 / 1 yr</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
                             Programming and maintaining ERP systems.
