--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
                                         optimization, take some Jira ticket, deployment, and some more cool stuff.<br><br>
 
                                         IDE stack: PhpStorm / WebStorm / Navicat / Postman.<br><br>
+                                        
+                                        Let's talk antonios.martinez.dev@gmail.com
 
 
                                     </p>
