--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ version of PHP 8.0 and Webpack JS.
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://www.guachipelin.com/" target="_blank"><b>guachipelin.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-
+Some of my tasks on this site: Integrate the reservation system. Send mail confirmations by SMTP. Program the contact form. Configure the languages plugin. Write CSS and JavaScript code for some pages of the site. Create pages and posts. Fix some bugs.
                                        </span>
                                             </div>
                                             <!-- Project 10 -->
