--- a/index.html
+++ b/index.html
@@ -414,6 +414,8 @@ version of PHP 8.0 and Webpack JS.
 
                                                 <p class="item-description"><a href="https://mybookie.ag/" target="_blank"><b>mybookie.ag</b> <i class="fa fa-arrow-circle-o-up"></i> </a></p>
                                                 <span class="item-small">
+PHP version updated. Modifications in the login and password recovery form.
+HTML and CSS design. Fix form validations with JavaScript and PHP.
 
                                        </span>
                                             </div>
