--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@ HTML and CSS design. Fix form validations with JavaScript and PHP.
 
                                                 <p class="item-description"><a href="https://oddsandnews.com/" target="_blank"><b>oddsandnews.com</b> <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
+SEO onsite for Angular CLI. Data migrations with MySQL. Responsive design.
+API optimization and Integration. New deployments to PROD. Setting up test development environments. Stored procedures. Joins and Queries. Services and components programming. Promises.
 
                                        </span>
                                             </div>
