--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ API optimization and Integration. New deployments to PROD. Setting up test devel
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://tapiruslodge.com/" target="_blank"><b>tapiruslodge.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-
+Pages, posts and categories creation. CSS and JavaScript file compression. Contacts form with PHP email confirmations. Menu creation. Images optimization.
                                        </span>
                                             </div>
                                             <!-- Project 3 -->
