--- a/index.html
+++ b/index.html
@@ -455,7 +455,8 @@ Pages, posts and categories creation. CSS and JavaScript file compression. Conta
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://cipreporting.com/" target="_blank"><b>cipreporting.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-
+Large reports creation. MySQL custom queries. Forms reports filtering. 
+Forms exportation with JavaScript and PHP. AJAX.
                                        </span>
                                             </div>
                                             <!-- Project 5 -->
