--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <div class="col-sm-4 col-md-4 col-lg-4">
                                     <div class="photo">
-                                        <img src="images/foto.png" alt="Antonio Martinez">
+                                        <img src="https://www.antoniomartz.ml/images/foto.png" alt="Antonio Martinez">
                                     </div>
                                     <div class="photo">
                                     </div>
@@ -99,10 +99,10 @@
                                         <h1>Antonio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
                                             <div class="item">
-                                                <div class="sp-subtitle">Web developer</div>
+                                                <div class="sp-subtitle">Web Developer</div>
                                             </div>
                                             <div class="item">
-                                                <div class="sp-subtitle">Web developer</div>
+                                                <div class="sp-subtitle">Web Developer</div>
                                             </div>
                                         </div>
                                     </div>
@@ -142,7 +142,7 @@
                                     <ul class="info-list">
                                         <li><span class="title">Age</span><span class="value">25</span></li>
                                         <li><span class="title">Location</span><span class="value">San Jose, Costa Rica</span></li>
-                                        <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonios.martinez.dev@gmail.com</a> </span></li>
+                                        <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonio@ramada.ml</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50660170413">+506 6477 5014</a></span></li>
                                         <li><span class="title">Languages</span><span class="value available">English/Spanish</span></li>
                                     </ul>
@@ -177,8 +177,12 @@
                                         Good understanding of web services and SOA-related standards like REST / OAuth / JSON.
                                         Clean code and strong frontend skills (HTML5, CSS3, Sass, Angular CLI, Bootstrap, jQuery).<br><br>
 
+                                        Certifications: CompTIA, ISC, GSEC, CEH, CAP, OSCP, GCFE, SEC541.<br><br>
+
+                                        
                                         MySQL databases design, normalization, administration, and SQL optimization. <br><br>
 
+                                        
                                         A day in my life may consist of: Work with JavaScript promises, design a responsive landing
                                         page, develop a custom WordPress plugin, adding an API endpoint, MySQL database design or
                                         normalization, read the documentation of new PHP releases, bugs find and fix, back up websites,
