--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <ul class="info-list">
                                         <li><span class="title">Age</span><span class="value">25</span></li>
                                         <li><span class="title">Location</span><span class="value">San Jose, Costa Rica</span></li>
-                                        <li><span class="title">Email</span><span class="value"> <a href="mailto:antonios.martinez.dev@gmail.com">antonio@ramada.ml</a> </span></li>
+                                        <li><span class="title">Email</span><span class="value"> <a href="mailto:antonio@ramada.ml">antonio@ramada.ml</a> </span></li>
                                         <li><span class="title">Phone</span><span class="value"><a href="tel:50660170413">+506 6477 5014</a></span></li>
                                         <li><span class="title">Languages</span><span class="value available">English/Spanish</span></li>
                                     </ul>
@@ -190,9 +190,7 @@
                                         optimization, take some Jira ticket, deployment, and some more cool stuff.<br><br>
 
                                         IDE stack: PhpStorm / WebStorm / Navicat / Postman.<br><br>
-                                        
-                                        Let's talk antonios.martinez.dev@gmail.com
-
+                                       
 
                                     </p>
 
