--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 <div class="col-sm-6 col-md-6 col-lg-6">
                                     <div class="block">
                                         <div class="block-title">
-                                            <h3>Experience</h3>
+                                            <h3>Professional experience</h3>
                                         </div>
 
                                         <div class="timeline">
@@ -216,9 +216,7 @@
                                                 <span class="item-small time-work">Dec 2020 – Mar 2021 / 4 mos</span>
                                                 <p class="item-description">Web developer</p>
                                                 <span class="item-small">
-MyBookie Sportsbook & Casino. I was hired as a consultant and was in charge of
-important updates in the WordPress core of mybookie.ag. Working with the latest
-version of PHP 8.0 and Webpack JS.
+WordPress Development.
                                        </span>
                                             </div>
                                             <!-- Experience 4 -->
@@ -416,8 +414,7 @@ version of PHP 8.0 and Webpack JS.
 
                                                 <p class="item-description"><a href="https://mybookie.ag/" target="_blank"><b>mybookie.ag</b> <i class="fa fa-arrow-circle-o-up"></i> </a></p>
                                                 <span class="item-small">
-PHP version updated. Modifications in the login and password recovery form.
-HTML and CSS design. Fix form validations with JavaScript and PHP.
+
 
                                        </span>
                                             </div>
@@ -428,8 +425,6 @@ HTML and CSS design. Fix form validations with JavaScript and PHP.
 
                                                 <p class="item-description"><a href="https://oddsandnews.com/" target="_blank"><b>oddsandnews.com</b> <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-SEO onsite for Angular CLI. Data migrations with MySQL. Responsive design.
-API optimization and Integration. New deployments to PROD. Setting up test development environments. Stored procedures. Joins and Queries. Services and components programming. JS Promises and HTTP.
 
                                        </span>
                                             </div>
@@ -439,7 +434,7 @@ API optimization and Integration. New deployments to PROD. Setting up test devel
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://tapiruslodge.com/" target="_blank"><b>tapiruslodge.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-Pages, posts and categories creation. CSS and JavaScript file compression. Contacts form with PHP email confirmations. Menu creation. Images optimization.
+
                                        </span>
                                             </div>
                                             <!-- Project 3 -->
@@ -457,8 +452,7 @@ Pages, posts and categories creation. CSS and JavaScript file compression. Conta
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://cipreporting.com/" target="_blank"><b>cipreporting.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-Large reports creation. MySQL custom queries. Forms reports filtering. 
-Forms exportation with JavaScript and PHP. AJAX.
+
                                        </span>
                                             </div>
                                             <!-- Project 5 -->
@@ -505,7 +499,6 @@ Forms exportation with JavaScript and PHP. AJAX.
                                             <div class="timeline-item">
                                                 <p class="item-description"><a href="https://www.guachipelin.com/" target="_blank"><b>guachipelin.com</b>  <i class="fa fa-arrow-circle-o-up"></i></a></p>
                                                 <span class="item-small">
-Some of my tasks on this site: Integrate the reservation system. Send mail confirmations by SMTP. Program the contact form. Configure the languages plugin. Write CSS and JavaScript code for some pages of the site. Create pages and posts. Fix some bugs.
                                        </span>
                                             </div>
                                             <!-- Project 10 -->
