--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Antonio Martinez - Web Developer</title>
+    <title>Senior Web Developer - Antonio Martinez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="Antonio Martinez" />
     <META NAME="ROBOTS" CONTENT="INDEX,FOLLOW">
@@ -99,10 +99,10 @@
                                         <h1>Antonio Martinez</h1>
                                         <div class="owl-carousel text-rotation">
                                             <div class="item">
-                                                <div class="sp-subtitle">Web Developer</div>
+                                                <div class="sp-subtitle">WordPress Developer</div>
                                             </div>
                                             <div class="item">
-                                                <div class="sp-subtitle">Web Developer</div>
+                                                <div class="sp-subtitle">WordPress Developer</div>
                                             </div>
                                         </div>
                                     </div>
