--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@ WordPress Development.
     <!-- /Main Content -->
 </div>
 <footer>
-    <div class="copyrights">© All rights reserved | Antonio Martinez | 2021 <a href="https://www.ramada.ml/privacy-policy">Privacy Policy</a></div>
+    <div class="copyrights">© All rights reserved | Antonio Martinez | 2021 <a href="https://www.ramada.ml/privacy-policy" target="_blank" >Privacy Policy</a></div>
 </footer>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="js/pages-switcher.js"></script>
 <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
